// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`await toHTML > API rendering within components > should support api.render() method in component render function 1`] = `"<!--lit-part AEmR7W+R0Ak=--><div><!--lit-part AEmR7W+R0Ak=--><div><!--lit-part 94tjhjhkEYE=--><span><!--lit-part-->Test Item<!--/lit-part--></span><!--/lit-part--></div><!--/lit-part--></div><!--/lit-part-->"`;

exports[`await toHTML > HTML wrapping > should default to empty title when not provided 1`] = `
"<!DOCTYPE html>
    <html lang="en">
      <head>
      
        <meta charset="UTF-8" />
        <title></title>
        <link rel="icon" type="image/x-icon" href="">
        
        
        
      </head>
      <body>
        <div id="root"><!--lit-part 3pnp7NirSdk=--><p>Content</p><!--/lit-part--></div>
        
        <script type="module" src="/main.js"></script>
        
      </body>
    </html>"
`;

exports[`await toHTML > HTML wrapping > should handle empty arrays for meta, styles, and scripts 1`] = `
"<!DOCTYPE html>
    <html lang="en">
      <head>
      
        <meta charset="UTF-8" />
        <title></title>
        <link rel="icon" type="image/x-icon" href="">
        
        
        
      </head>
      <body>
        <div id="root"><!--lit-part 3pnp7NirSdk=--><p>Content</p><!--/lit-part--></div>
        
        <script type="module" src="/main.js"></script>
        
      </body>
    </html>"
`;

exports[`await toHTML > HTML wrapping > should include all options in wrapped HTML 1`] = `
"<!DOCTYPE html>
    <html lang="en">
      <head>
      
        <meta charset="UTF-8" />
        <title>Complete Page</title>
        <link rel="icon" type="image/x-icon" href="">
        <meta name="author" content="Test Author">
        <link rel="stylesheet" href="/style.css">
        
      </head>
      <body>
        <div id="root"><!--lit-part AQYzPwzT5bk=--><main>Main content</main><!--/lit-part--></div>
        
        <script type="module" src="/main.js"></script>
        <script type="module" src="/app.js"></script>
      </body>
    </html>"
`;

exports[`await toHTML > HTML wrapping > should include meta tags in wrapped HTML 1`] = `
"<!DOCTYPE html>
    <html lang="en">
      <head>
      
        <meta charset="UTF-8" />
        <title>Test Page</title>
        <link rel="icon" type="image/x-icon" href="">
        <meta name="description" content="Test description">
<meta name="viewport" content="width=device-width, initial-scale=1">
        
        
      </head>
      <body>
        <div id="root"><!--lit-part 3pnp7NirSdk=--><p>Content</p><!--/lit-part--></div>
        
        <script type="module" src="/main.js"></script>
        
      </body>
    </html>"
`;

exports[`await toHTML > HTML wrapping > should include scripts in wrapped HTML 1`] = `
"<!DOCTYPE html>
    <html lang="en">
      <head>
      
        <meta charset="UTF-8" />
        <title></title>
        <link rel="icon" type="image/x-icon" href="">
        
        
        
      </head>
      <body>
        <div id="root"><!--lit-part 3pnp7NirSdk=--><p>Content</p><!--/lit-part--></div>
        
        <script type="module" src="/main.js"></script>
        <script type="module" src="/js/app.js"></script>
<script type="module" src="/js/analytics.js"></script>
      </body>
    </html>"
`;

exports[`await toHTML > HTML wrapping > should include stylesheets in wrapped HTML 1`] = `
"<!DOCTYPE html>
    <html lang="en">
      <head>
      
        <meta charset="UTF-8" />
        <title></title>
        <link rel="icon" type="image/x-icon" href="">
        
        <link rel="stylesheet" href="/css/style.css">
<link rel="stylesheet" href="/css/theme.css">
        
      </head>
      <body>
        <div id="root"><!--lit-part 3pnp7NirSdk=--><p>Content</p><!--/lit-part--></div>
        
        <script type="module" src="/main.js"></script>
        
      </body>
    </html>"
`;

exports[`await toHTML > HTML wrapping > should wrap HTML with basic DOCTYPE and structure 1`] = `
"<!DOCTYPE html>
    <html lang="en">
      <head>
      
        <meta charset="UTF-8" />
        <title>My Page</title>
        <link rel="icon" type="image/x-icon" href="">
        
        
        
      </head>
      <body>
        <div id="root"><!--lit-part cFVfWqyXqV4=--><h1>Page Title</h1><!--/lit-part--></div>
        
        <script type="module" src="/main.js"></script>
        
      </body>
    </html>"
`;

exports[`await toHTML > basic rendering > should render empty content 1`] = `"<!--lit-part BRUAAAUVAAA=--><?><!--/lit-part-->"`;

exports[`await toHTML > basic rendering > should render nested elements 1`] = `
"<!--lit-part k7Ru+SuVVZE=--><div class="container">
          <h1>Title</h1>
          <p>Content</p>
        </div><!--/lit-part-->"
`;

exports[`await toHTML > basic rendering > should render simple HTML without wrapping 1`] = `"<!--lit-part XLxan7MvHxQ=--><h1>Hello World</h1><!--/lit-part-->"`;

exports[`await toHTML > basic rendering > should render with inline styles 1`] = `"<!--lit-part 8q9MRT6iw1M=--><div style="color: red; font-size: 16px;">Styled</div><!--/lit-part-->"`;

exports[`await toHTML > complex scenarios > should render a complete page structure with message list 1`] = `
"<!--lit-part +cA78tGC3gg=--><div class="app">
          <header><h1>Messages</h1></header>
          <main><!--lit-part BBm+nXwMlvM=--><div class="message"><p><!--lit-part-->First message<!--/lit-part--></p></div><!--/lit-part--> <!--lit-part BBm+nXwMlvM=--><div class="message"><p><!--lit-part-->Second message<!--/lit-part--></p></div><!--/lit-part--></main>
          <footer>© 2024</footer>
        </div><!--/lit-part-->"
`;

exports[`await toHTML > complex scenarios > should render wrapped complex page with all assets 1`] = `
"<!DOCTYPE html>
    <html lang="en">
      <head>
      
        <meta charset="UTF-8" />
        <title>My Website</title>
        <link rel="icon" type="image/x-icon" href="">
        <meta name="description" content="Welcome to my website">
<meta name="viewport" content="width=device-width">
        <link rel="stylesheet" href="/style.css">
        
      </head>
      <body>
        <div id="root"><!--lit-part +13IoGopdS0=--><div>
          <!--lit-part 3pdihBEs5o4=--><header><h1>My Website</h1></header><!--/lit-part-->
          <p>Welcome!</p>
        </div><!--/lit-part--></div>
        
        <script type="module" src="/main.js"></script>
        <script type="module" src="/script.js"></script>
      </body>
    </html>"
`;

exports[`await toHTML > edge cases > should handle special characters in content 1`] = `"<!--lit-part PnFz4b334Z4=--><p>&lt;script&gt; &amp; "quotes"</p><!--/lit-part-->"`;

exports[`await toHTML > edge cases > should not include wrap by default 1`] = `"<!--lit-part 3pnp7NirSdk=--><p>Content</p><!--/lit-part-->"`;

exports[`await toHTML > edge cases > should return only inner HTML when wrap is false 1`] = `"<!--lit-part gGEl6BGI3HM=--><p>Inner</p><!--/lit-part-->"`;

exports[`await toHTML > event handling > should render event handlers in templates 1`] = `
"<!--lit-part AEmR7W+R0Ak=--><div><!--lit-part 0Z7ukmv6ipw=--><!--lit-node 0--><div >
                Click me
              </div><!--/lit-part--></div><!--/lit-part-->"
`;

exports[`await toHTML > event handling > should render multiple event handlers 1`] = `
"<!--lit-part AEmR7W+R0Ak=--><div><!--lit-part FAFSiVKpr7w=--><div>
                <!--lit-node 1--><button >
                  +
                </button>
                <span><!--lit-part-->5<!--/lit-part--></span>
                <!--lit-node 4--><button >
                  -
                </button>
              </div><!--/lit-part--></div><!--/lit-part-->"
`;

exports[`await toHTML > rendering with state > should evaluate conditional rendering based on state 1`] = `"<!--lit-part AEmR7W+R0Ak=--><div><!--lit-part chlxvVpvWi4=--><p>Visible content</p><!--/lit-part--></div><!--/lit-part-->"`;

exports[`await toHTML > rendering with state > should render entities from store 1`] = `"<!--lit-part AEmR7W+R0Ak=--><div><!--lit-part 94tjhjhkEYE=--><span><!--lit-part-->Hello from store<!--/lit-part--></span><!--/lit-part--></div><!--/lit-part-->"`;

exports[`await toHTML > rendering with state > should render multiple entities 1`] = `
"<!--lit-part djPks5nEU7c=--><ul>
          <!--lit-part PuAyB/F8cHw=--><li><!--lit-part-->First<!--/lit-part--></li><!--/lit-part--> <!--lit-part PuAyB/F8cHw=--><li><!--lit-part-->Second<!--/lit-part--></li><!--/lit-part--> <!--lit-part PuAyB/F8cHw=--><li><!--lit-part-->Third<!--/lit-part--></li><!--/lit-part-->
        </ul><!--/lit-part-->"
`;
